--- a/gaea-trie-tree/Cargo.toml
+++ b/gaea-trie-tree/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "common_crate"
+name = "gaea-trie-tree"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4.16"
-log4rs = "1.0.0"
